<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="GVL_Machine" Id="{12345678-1234-1234-1234-123456789003}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    MotorTemperature : REAL := 25.0;   // Â°C
    OilPressure : REAL := 3.0;         // bar
    MotorSpeed : REAL := 0.0;          // RPM

    TempWarning : BOOL := FALSE;
    PressureWarning : BOOL := FALSE;
    SpeedWarning : BOOL := FALSE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>
